--- a/ui/Ui_main.ui
+++ b/ui/Ui_main.ui
@@ -59,7 +59,7 @@
      <enum>QTabWidget::West</enum>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>0</number>
     </property>
     <property name="iconSize">
      <size>
@@ -545,7 +545,7 @@
       <widget class="QPushButton" name="button_enter_operator">
        <property name="geometry">
         <rect>
-         <x>110</x>
+         <x>210</x>
          <y>170</y>
          <width>101</width>
          <height>41</height>
@@ -583,469 +583,11 @@
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
-     </widget>
-     <widget class="QWidget" name="widget_keyboard" native="true">
-      <property name="geometry">
-       <rect>
-        <x>80</x>
-        <y>260</y>
-        <width>571</width>
-        <height>181</height>
-       </rect>
-      </property>
-      <widget class="QPushButton" name="button_a">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>90</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>a</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_right">
-       <property name="geometry">
-        <rect>
-         <x>510</x>
-         <y>130</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>→</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_o">
-       <property name="geometry">
-        <rect>
-         <x>410</x>
-         <y>50</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>o</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_k">
-       <property name="geometry">
-        <rect>
-         <x>360</x>
-         <y>90</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>k</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_num2">
-       <property name="geometry">
-        <rect>
-         <x>60</x>
-         <y>10</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>2</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_x">
-       <property name="geometry">
-        <rect>
-         <x>160</x>
-         <y>130</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>x</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_f">
-       <property name="geometry">
-        <rect>
-         <x>160</x>
-         <y>90</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>f</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_q">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>50</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>q</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_p">
-       <property name="geometry">
-        <rect>
-         <x>460</x>
-         <y>50</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>p</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_i">
-       <property name="geometry">
-        <rect>
-         <x>360</x>
-         <y>50</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>i</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_u">
-       <property name="geometry">
-        <rect>
-         <x>310</x>
-         <y>50</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>u</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_num6">
-       <property name="geometry">
-        <rect>
-         <x>260</x>
-         <y>10</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>6</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_num9">
-       <property name="geometry">
-        <rect>
-         <x>410</x>
-         <y>10</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>9</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_s">
-       <property name="geometry">
-        <rect>
-         <x>60</x>
-         <y>90</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>s</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_t">
-       <property name="geometry">
-        <rect>
-         <x>210</x>
-         <y>50</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>t</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_c">
-       <property name="geometry">
-        <rect>
-         <x>210</x>
-         <y>130</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>c</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_h">
-       <property name="geometry">
-        <rect>
-         <x>260</x>
-         <y>90</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>h</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_w">
-       <property name="geometry">
-        <rect>
-         <x>60</x>
-         <y>50</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>w</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_num7">
-       <property name="geometry">
-        <rect>
-         <x>310</x>
-         <y>10</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>7</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_g">
-       <property name="geometry">
-        <rect>
-         <x>210</x>
-         <y>90</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>g</string>
-       </property>
-      </widget>
       <widget class="QPushButton" name="button_num1">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>10</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>1</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_m">
-       <property name="geometry">
-        <rect>
-         <x>410</x>
-         <y>130</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>m</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_r">
-       <property name="geometry">
-        <rect>
-         <x>160</x>
-         <y>50</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>r</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_b">
-       <property name="geometry">
-        <rect>
-         <x>310</x>
-         <y>130</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>b</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_e">
-       <property name="geometry">
-        <rect>
-         <x>110</x>
-         <y>50</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>e</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_j">
-       <property name="geometry">
-        <rect>
-         <x>310</x>
-         <y>90</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>j</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_num3">
-       <property name="geometry">
-        <rect>
-         <x>110</x>
-         <y>10</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>3</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_z">
-       <property name="geometry">
-        <rect>
-         <x>110</x>
-         <y>130</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>z</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_enter">
-       <property name="geometry">
-        <rect>
-         <x>460</x>
-         <y>90</y>
+         <x>30</x>
+         <y>170</y>
          <width>101</width>
          <height>41</height>
         </rect>
@@ -1054,199 +596,7 @@
         <enum>Qt::NoFocus</enum>
        </property>
        <property name="text">
-        <string>确定</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_n">
-       <property name="geometry">
-        <rect>
-         <x>360</x>
-         <y>130</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>n</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_v">
-       <property name="geometry">
-        <rect>
-         <x>260</x>
-         <y>130</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>v</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_d">
-       <property name="geometry">
-        <rect>
-         <x>110</x>
-         <y>90</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>d</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_left">
-       <property name="geometry">
-        <rect>
-         <x>460</x>
-         <y>130</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>←</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_num8">
-       <property name="geometry">
-        <rect>
-         <x>360</x>
-         <y>10</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>8</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_back">
-       <property name="geometry">
-        <rect>
-         <x>510</x>
-         <y>10</y>
-         <width>51</width>
-         <height>81</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>←</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_num4">
-       <property name="geometry">
-        <rect>
-         <x>160</x>
-         <y>10</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>4</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_cap">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>130</y>
-         <width>101</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>大写</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_y">
-       <property name="geometry">
-        <rect>
-         <x>260</x>
-         <y>50</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>y</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_num0">
-       <property name="geometry">
-        <rect>
-         <x>460</x>
-         <y>10</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>0</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_num5">
-       <property name="geometry">
-        <rect>
-         <x>210</x>
-         <y>10</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>5</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="button_l">
-       <property name="geometry">
-        <rect>
-         <x>410</x>
-         <y>90</y>
-         <width>51</width>
-         <height>41</height>
-        </rect>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::NoFocus</enum>
-       </property>
-       <property name="text">
-        <string>l</string>
+        <string>键盘</string>
        </property>
       </widget>
      </widget>
